Adds a Perl-based implementation of vscore computation
- Migrate from Runtime.exec to ProcessBuilder in order to
  redirect stderr and stdout to a log file, which is mandatory
  to avoid subprocess hang if it generates too much output which is
  neither reader nor redirected by the parent process